--- a/extension/DataProcessors/fast8desk_Desktop/Forms/fast8desk_ОПрограмме.xml
+++ b/extension/DataProcessors/fast8desk_Desktop/Forms/fast8desk_ОПрограмме.xml
@@ -1,12 +1,16 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <MetaDataObject xmlns="http://v8.1c.ru/8.3/MDClasses" xmlns:app="http://v8.1c.ru/8.2/managed-application/core" xmlns:cfg="http://v8.1c.ru/8.1/data/enterprise/current-config" xmlns:cmi="http://v8.1c.ru/8.2/managed-application/cmi" xmlns:ent="http://v8.1c.ru/8.1/data/enterprise" xmlns:lf="http://v8.1c.ru/8.2/managed-application/logform" xmlns:style="http://v8.1c.ru/8.1/data/ui/style" xmlns:sys="http://v8.1c.ru/8.1/data/ui/fonts/system" xmlns:v8="http://v8.1c.ru/8.1/data/core" xmlns:v8ui="http://v8.1c.ru/8.1/data/ui" xmlns:web="http://v8.1c.ru/8.1/data/ui/colors/web" xmlns:win="http://v8.1c.ru/8.1/data/ui/colors/windows" xmlns:xen="http://v8.1c.ru/8.3/xcf/enums" xmlns:xpr="http://v8.1c.ru/8.3/xcf/predef" xmlns:xr="http://v8.1c.ru/8.3/xcf/readable" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.15">
-	<Form uuid="a3e64eb7-fca6-481b-a4c4-e0b7a0555633">
+	<Form uuid="f126ea53-ae39-4e1a-9fed-45b354b3ced6">
 		<Properties>
-			<Name>fast8Настройки</Name>
+			<Name>fast8desk_ОПрограмме</Name>
 			<Synonym>
 				<v8:item>
+					<v8:lang/>
+					<v8:content>Fast8desk о программе</v8:content>
+				</v8:item>
+				<v8:item>
 					<v8:lang>ru</v8:lang>
-					<v8:content>Настройки</v8:content>
+					<v8:content>О программе</v8:content>
 				</v8:item>
 			</Synonym>
 			<Comment/>
