--- a/extension/DataProcessors/fast8desk_Desktop/Forms/fast8desk_ПараметрыПерезагрузки.xml
+++ b/extension/DataProcessors/fast8desk_Desktop/Forms/fast8desk_ПараметрыПерезагрузки.xml
@@ -2,7 +2,7 @@
 <MetaDataObject xmlns="http://v8.1c.ru/8.3/MDClasses" xmlns:app="http://v8.1c.ru/8.2/managed-application/core" xmlns:cfg="http://v8.1c.ru/8.1/data/enterprise/current-config" xmlns:cmi="http://v8.1c.ru/8.2/managed-application/cmi" xmlns:ent="http://v8.1c.ru/8.1/data/enterprise" xmlns:lf="http://v8.1c.ru/8.2/managed-application/logform" xmlns:style="http://v8.1c.ru/8.1/data/ui/style" xmlns:sys="http://v8.1c.ru/8.1/data/ui/fonts/system" xmlns:v8="http://v8.1c.ru/8.1/data/core" xmlns:v8ui="http://v8.1c.ru/8.1/data/ui" xmlns:web="http://v8.1c.ru/8.1/data/ui/colors/web" xmlns:win="http://v8.1c.ru/8.1/data/ui/colors/windows" xmlns:xen="http://v8.1c.ru/8.3/xcf/enums" xmlns:xpr="http://v8.1c.ru/8.3/xcf/predef" xmlns:xr="http://v8.1c.ru/8.3/xcf/readable" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.15">
 	<Form uuid="0311ff5f-ece0-4776-ab64-a2bbd56559d9">
 		<Properties>
-			<Name>fast8ПараметрыПерезагрузки</Name>
+			<Name>fast8desk_ПараметрыПерезагрузки</Name>
 			<Synonym>
 				<v8:item>
 					<v8:lang>ru</v8:lang>
